--- a/Source/Falcon/src/Falcon.Database/Falcon.Database.csproj
+++ b/Source/Falcon/src/Falcon.Database/Falcon.Database.csproj
@@ -76,6 +76,7 @@
     <Compile Include="SqlServer\QueryProcessors\SpinWheelQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\StoresQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\ThemesQueryProcessor.cs" />
+    <Compile Include="SqlServer\QueryProcessors\UserInfoQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\UserQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\UserStatQueryProcessor.cs" />
     <Compile Include="SqlServer\QueryProcessors\WatchAdQueryProcessor.cs" />
