--- a/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
+++ b/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Controllers\V1\SpinWheelController.cs" />
     <Compile Include="Controllers\V1\WatchAdController.cs" />
     <Compile Include="Controllers\V2\AppStatesController.cs" />
+    <Compile Include="Controllers\V2\QuestionsController.cs" />
     <Compile Include="Controllers\V2\QuestsController.cs" />
     <Compile Include="Controllers\V2\UserInfoController.cs" />
     <Compile Include="Controllers\V2\UsersController.cs" />
@@ -260,6 +261,7 @@
     <Compile Include="MaintenanceProcessing\Private\DWMMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\GlobalApplicationState.cs" />
     <Compile Include="MaintenanceProcessing\Private\ItemPurchaseManager.cs" />
+    <Compile Include="MaintenanceProcessing\Private\QuestionsMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\QuestsMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\SpinWheelMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Private\StoresMaintenanceProcessor.cs" />
@@ -280,6 +282,7 @@
     <Compile Include="MaintenanceProcessing\Public\IDWMMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\IGlobalApplicationState.cs" />
     <Compile Include="MaintenanceProcessing\Public\IItemPurchaseManager.cs" />
+    <Compile Include="MaintenanceProcessing\Public\IQuestionsMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\IQuestsMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\ISpinWheelMaintenanceProcessor.cs" />
     <Compile Include="MaintenanceProcessing\Public\IStoresMaintenanceProcessor.cs" />
@@ -329,7 +332,6 @@
     <Compile Include="Controllers\V1\CommentsController.cs" />
     <Compile Include="Controllers\V1\FavoritesController.cs" />
     <Compile Include="Controllers\V1\QuestionBoostsController.cs" />
-    <Compile Include="Controllers\V1\QuestionsController.cs" />
     <Compile Include="Controllers\V1\ReportedQuestionsController.cs" />
     <Compile Include="Controllers\V1\ReportTypesController.cs" />
     <Compile Include="Controllers\V1\StoresController.cs" />
