--- a/Source/Falcon/src/Falcon.Data/Falcon.Data.csproj
+++ b/Source/Falcon/src/Falcon.Data/Falcon.Data.csproj
@@ -55,11 +55,13 @@
     <Compile Include="QueryProcessors\ICommentsQueryProcessor.cs" />
     <Compile Include="QueryProcessors\ICreatedQuestionsQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IDWMQueryProcessor.cs" />
+    <Compile Include="QueryProcessors\IFriendsQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IGameConfigQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IGiftQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IMarketInfoQueryProcessor.cs" />
     <Compile Include="QueryProcessors\INotificationsQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IAppAdvertsQueryProcessor.cs" />
+    <Compile Include="QueryProcessors\IQuestionReportQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IQuestionSelectorQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IQuestionsQueryProcessor.cs" />
     <Compile Include="QueryProcessors\IQuestsQueryProcessor.cs" />
