--- a/Source/Falcon/src/Falcon.Common/Falcon.Common.csproj
+++ b/Source/Falcon/src/Falcon.Common/Falcon.Common.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Extentions\UriExtensions.cs" />
     <Compile Include="IDateTime.cs" />
     <Compile Include="IRandomGenerator.cs" />
+    <Compile Include="IUUIDGenerator.cs" />
     <Compile Include="Logging\ILogManager.cs" />
     <Compile Include="Logging\LogManagerAdapter.cs" />
     <Compile Include="PrimitiveTypeParser.cs" />
@@ -71,6 +72,7 @@
     <Compile Include="RandomGeneratorAdapter.cs" />
     <Compile Include="Security\IUserSession.cs" />
     <Compile Include="Security\IWebUserSession.cs" />
+    <Compile Include="UUIDGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
