--- a/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
+++ b/Source/Falcon/src/Falcon.Web.Api/Falcon.Web.Api.csproj
@@ -214,6 +214,7 @@
     <Compile Include="InquiryProcessing\Private\FriendsInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\GameConfigInqiuryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\InitializationInquiryProcessor.cs" />
+    <Compile Include="InquiryProcessing\Private\LevelInMemoryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\LevelInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\QuestionReportInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Private\QuestionsInquiryProcessor.cs" />
@@ -237,6 +238,7 @@
     <Compile Include="InquiryProcessing\Public\IFriendsInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\IGameConfigInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\IInitializationInquiryProcessor.cs" />
+    <Compile Include="InquiryProcessing\Public\ILevelInMemoryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\ILevelInquiryProcessor.cs" />
     <Compile Include="InquiryProcessing\Public\IPagedDataRequestFactory.cs" />
     <Compile Include="InquiryProcessing\Private\PagedDataRequestFactory.cs" />
