--- a/Source/Falcon/src/Falcon.Web.Api/Web.config
+++ b/Source/Falcon/src/Falcon.Web.Api/Web.config
@@ -31,6 +31,32 @@
       <appender-ref ref="LogFileAppender" />
     </root>
   </log4net>
+  <system.webServer>
+    <urlCompression doStaticCompression="true" doDynamicCompression="true" dynamicCompressionBeforeCache="true" />
+    <httpCompression>
+      <dynamicTypes>
+        <clear />
+        <add enabled="true" mimeType="text/*" />
+        <add enabled="true" mimeType="message/*" />
+        <add enabled="true" mimeType="application/x-javascript" />
+        <add enabled="true" mimeType="application/javascript" />
+        <add enabled="true" mimeType="application/json" />
+        <add enabled="false" mimeType="*/*" />
+        <add enabled="true" mimeType="application/atom+xml" />
+      </dynamicTypes>
+      <staticTypes>
+        <clear />
+        <add enabled="true" mimeType="text/*" />
+        <add enabled="true" mimeType="message/*" />
+        <add enabled="true" mimeType="application/javascript" />
+        <add enabled="true" mimeType="application/atom+xml" />
+        <add enabled="true" mimeType="application/xaml+xml" />
+        <add enabled="true" mimeType="application/json" />
+        <add enabled="false" mimeType="*/*" />
+      </staticTypes>
+    </httpCompression>
+  </system.webServer>
+  
   <connectionStrings>
     <!--Online Connection-->
     
