--- a/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
+++ b/Source/Falcon/src/Falcon.Web.Models/Falcon.Web.Models.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Api\Config\SClientAppState.cs" />
     <Compile Include="Api\Config\SGameConfig.cs" />
     <Compile Include="Api\Config\SClientVersionInfo.cs" />
+    <Compile Include="Api\Friend\SFriend.cs" />
     <Compile Include="Api\Input\Questions\EditInfo.cs" />
     <Compile Include="Api\Input\Questions\RemoveInfo.cs" />
     <Compile Include="Api\Level\SLevelUpInfo.cs" />
